# CSC1106_Project

./: .env.example  .gitignore  Cargo.toml  README.md  schema.sql
.sqlx/: query-059569c0ed735a7ead0133dec8d0783ef6e1db82ae777374af8bedc8dac3b743.json  query-09c91db51ce64e3ac15b8ee660af6dcf4307dc43770fc38cdd65cdc947a95618.json  query-1e4666e16b7b8a4371a249836d3bc5b2b2fd5514272960e937277c4b1b037c07.json  query-2775dc107b9e78a38f6a4324b4a366fa1ab352c8a485df597cb36a3d6dee7d61.json  query-29337431d9ccc68de070a1d411e462024344297917c1bb743369444062f57943.json  query-3059ecc0d467817d9ce43d2f79fe9e9ef646c7763ed39ba085f5ffb51c7983d4.json  query-35a383a6bc3e2ff9e84f2b13dcdf25f262a2a7e48e340e5caec4056903472c7f.json  query-4216e0f537c02886c42cd74148a8544f971afea34de09489f5a5ef5faa0fe48d.json  query-473ac1cbfc20898d2621dc7be3c25382e2dd27b2552318c92d53b80d3eb244be.json  query-4d3b56fd9fd08ab54a8ae7a6c2e1849bab2deda6bd8d65a2794b65c420b524bf.json  query-5b73c09cabb64abdd0dbdd94e7b0279a03541b680591989513e2458ad0047cb6.json  query-5de11b75969959aabcf8dc1e1ea5b740fec485ffcf9c91f1c5dd343003f0161f.json  query-627e13de0ede9b5d28e659a3c88018a0a795961af15c1cd4e43c119217c82232.json  query-71b467d449b00f767f21cb7ef725a24ba9fc64a5d5320a35d625cd497613b7ec.json  query-73a62f9c6ef1db4194756dd2b195353869154120fe635ce976c163a1a30b28f1.json  query-7bf3125a048694296d78282cf8425621c894bedec9e5f1497ec8a3e255297400.json  query-7d76b553701d0a80fa759c0b5f9144b28d5f57244068cc257bfa47b2e53e1deb.json  query-7f8a0a448c35d32c0389fa846eaa531f0fafabf57019f6995b9d97c1c158c089.json  (+18 more)
docs/: cloud-database-setup.md  (+2 more)
(+86 files in other folders)
