[package]
name = "lms_portal"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
argon2 = "0.5"
tera = "1.20"
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "derive", "chrono"] }
serde = { version = "1", features = ["derive"] }
actix-multipart = "0.7"
futures-util = "0.3"
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
